--- a/src/app/components/creation-modification-gr/creation-modification-gr.component.scss
+++ b/src/app/components/creation-modification-gr/creation-modification-gr.component.scss
@@ -17,3 +17,9 @@
 .bouton-copier {
   color: white;
 }
+
+.surligner {
+  background-color: rgb(206, 206, 206);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
