--- a/src/app/components/add-reunion/add-reunion.component.html
+++ b/src/app/components/add-reunion/add-reunion.component.html
@@ -92,7 +92,13 @@
   <hr>
 
 
-
+  <div class="row mt-3">
+    <div class="col-12">
+      <label for="description_complement_rapport">{{ 'page.add_reunion.description_complement_rapport' | translate }}</label>
+      <textarea [(ngModel)]="reunion.complement_rapport" (keyup)="genererRapport()" class="form-control" id="description_complement_rapport" rows="5">
+    </textarea>
+    </div>
+  </div>
 
   <div class="mt-3" *ngIf="!reunion.valide">
     <button (click)="back()" class="btn btn-secondary"> {{ 'page.add_reunion.retour' | translate }}</button>
@@ -119,7 +125,7 @@
   </div>
 
   <div class="mt-5 mb-5">
-    <app-rapport [rapport]="rapport" (generer)="genererRapport()" (textChanged)="setRapport($event)"></app-rapport>
+    <app-rapport [rapport]="rapport" [readonly]="true" (generer)="genererRapport()" (textChanged)="setRapport($event)"></app-rapport>
   </div>
 </div>
 
