--- a/src/app/components/add-event/add-event.component.html
+++ b/src/app/components/add-event/add-event.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="row mt-5 mb-5">
     <div class="col-2  mt-3">
-      <button class="btn bouton-retour" (click)="back()"><i class="bi bi-chevron-left"></i> {{ 'common.retour' | translate }}</button>
+      <button class="btn bouton-retour" (click)="back()"><i class="bi bi-chevron-left"></i> {{ 'common.retour' |
+        translate }}</button>
     </div>
     <div class="col-10">
       <app-titre [libelle]="'page.add_event.titre'"></app-titre>
@@ -19,15 +20,18 @@
   <div class="row mt-5">
     <div class="col-md-6 col-sm-12 mb-3 form-group">
       <label for="nom"> {{ 'page.add_event.nom' | translate }}</label><span class="obligatoire">*</span>
-      <input type="text" class="form-control" [(ngModel)]="libelle" id="nom" [placeholder]="'page.add_event.nom_placeholder' | translate">
+      <input type="text" class="form-control" [(ngModel)]="libelle" id="nom"
+        [placeholder]="'page.add_event.nom_placeholder' | translate">
       <small class="form-text message_erreur" *ngIf="nomTitreManquant">{{ 'page.add_event.nom_titre_manquant' |
         translate }}</small>
     </div>
 
     <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="titre_message">{{ 'page.add_event.titre_message' | translate }}</label><span class="obligatoire">*</span>
-      <input type="text" class="form-control"[(ngModel)]="titre_message"  id="titre_message" >
-      <small class="form-text message_erreur" *ngIf="nomTitreManquant">{{ 'page.add_event.nom_titre_manquant' | translate
+      <label for="titre_message">{{ 'page.add_event.titre_message' | translate }}</label><span
+        class="obligatoire">*</span>
+      <input type="text" class="form-control" [(ngModel)]="titre_message" id="titre_message">
+      <small class="form-text message_erreur" *ngIf="nomTitreManquant">{{ 'page.add_event.nom_titre_manquant' |
+        translate
         }}</small>
     </div>
 
@@ -49,11 +53,39 @@
 
     <div class="col-md-6 col-sm-12 mb-3 form-group">
       <label for="predicateur">{{ 'page.add_event.predicateur' | translate }}</label>
-      <input type="text" class="form-control" [(ngModel)]="predicateur" id="predicateur" [(ngModel)]="predicateur" list="liste_predicateur">
+      <input type="text" class="form-control" [(ngModel)]="predicateur" id="predicateur" [(ngModel)]="predicateur"
+        list="liste_predicateur">
       <datalist id="liste_predicateur">
         <option *ngFor="let predicateur of predicateurs" [value]="predicateur.nom"></option>
       </datalist>
     </div>
+
+    <div class="row">
+      <div class="col-md-6 col-sm-12 mb-3 form-group">
+        <div class="form-check" *ngIf="niveauRole == 4">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="4" name="optradio" (change)="changerPortee(4)">GR
+          </label>
+        </div>
+        <div class="form-check" *ngIf="niveauRole >= 3">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="3" name="optradio" (change)="changerPortee(3)" >Réseau
+          </label>
+        </div>
+        <div class="form-check" *ngIf="niveauRole >= 2">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="2" name="optradio" (change)="changerPortee(2)">Eglise locale
+          </label>
+        </div>
+        <div class="form-check" *ngIf="niveauRole >= 1">
+          <label class="form-check-label">
+            <input type="radio" class="form-check-input" value="1" name="optradio" checked (change)="changerPortee(1)">Tout le ministère
+          </label>
+        </div>
+      </div>
+    </div>
+
+
 
     <div class="row mb-2 mt-3">
       <button (click)="back()" type="submit" class="btn btn-secondary col-md-6 col-sm-12 mb-2 ms-3">{{
