--- a/src/app/components/add-gr/add-gr.component.html
+++ b/src/app/components/add-gr/add-gr.component.html
@@ -28,7 +28,7 @@
 
   </app-creation-modification-gr>
 
-  <div class="row">
+  <div class="row mb-5" >
     <div class="col-sm-12 col-md-6">
 
       <button class="btn btn-light bouton-ajouter-responsable" title="{{ 'page.creer_gr.info.creer_gr' | translate }}"
