--- a/src/app/components/add-personne/add-personne.component.html
+++ b/src/app/components/add-personne/add-personne.component.html
@@ -16,90 +16,10 @@
     {{ 'page.add_personne.error_message' | translate }}
   </div>
 
-  <div class="row mt-5">
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="nom"> {{ 'page.add_personne.nom' | translate }}</label>
-      <input type="text" class="form-control" id="nom" [(ngModel)]="nom" (ngModelChange)="nom = $event.toUpperCase()">
-      <small class="form-text message_erreur" *ngIf="nomPrenomManquant">{{ 'page.add_personne.nom_prenom_manquant' |
-        translate }}</small>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="prenom">{{ 'page.add_personne.prenom' | translate }}</label>
-      <input type="text" class="form-control" id="prenom" [(ngModel)]="prenom"  (ngModelChange)="prenom = inTitleCase($event)">
-      <small class="form-text message_erreur" *ngIf="nomPrenomManquant">{{ 'page.add_personne.nom_prenom_manquant' |
-        translate }}</small>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="numero">{{ 'page.add_personne.numero' | translate }}</label>
-      <input type="text" class="form-control" id="numero" [formControl]="numero">
-      <small class="form-text message_erreur" *ngIf="numeroManquant">{{ 'page.add_personne.numero_manquant' | translate
-        }}</small>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="email">{{ 'page.add_personne.email' | translate }}</label>
-      <input type="email" class="form-control" id="email" [formControl]="email">
-      <small class="form-text message_erreur" *ngIf="emailInvalide">{{ 'page.add_personne.email_invalide' | translate
-        }}</small>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="ville">{{ 'page.add_personne.ville' | translate }}</label>
-      <input type="text" class="form-control" id="ville" [(ngModel)]="ville" list="datalist_ville" autocomplete="off">
-    </div>
-    <datalist id="datalist_ville">
-      <option *ngFor="let ville of villes" [value]="ville">{{ ville }}</option>
-    </datalist>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="pays">{{ 'page.add_personne.pays' | translate }}</label>
-      <input type="text" class="form-control" id="pays" [(ngModel)]="paysPersonne" list="datalist_pays" autocomplete="off">
-    </div>
-    <datalist id="datalist_pays">
-      <option *ngFor="let currentPays of pays" [value]="currentPays">{{ currentPays }}</option>
-    </datalist>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="status">{{ 'page.add_personne.status' | translate }}</label>
-      <div>
-        <select class="form-select" aria-label="Default select example" [formControl]="statusPersonne">
-          <option *ngFor="let status of listeStatus; let i = index" [value]="status.id" [selected]="status.selected">{{
-            'page.liste_personnes.status.'+status.libelle | translate}}</option>
-        </select>
-      </div>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="gr-value">GR</label>
-      <div>
-        <select
-          *ngIf="currentUserRole !== role_responsable_gr"
-          class="form-select" aria-label="Default select example" [formControl]="gr">
-          <option *ngFor="let gr of grs" [value]="gr.id">{{ gr.libelle }}</option>
-        </select>
-
-        <input *ngIf="currentUserRole === role_responsable_gr" type="text" class="form-control" disabled [value]="grName" />
-      </div>
-    </div>
-
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="dateNaissance">{{ 'page.add_personne.date_naissance' | translate }}</label>
-      <input type="text" class="form-control" id="dateNaissance" [formControl]="datenaissance" maDate
-        placeholder="jj/mm/aaaa" (keyup)="normaliserDateNaissance()" />
-      <small class="form-text message_erreur" *ngIf="dateNaissanceInvalide">{{ 'page.add_personne.date_invalide' |
-        translate }}</small>
-    </div>
 
 
-    <div class="col-md-6 col-sm-12 mb-3 form-group">
-      <label for="datenaissance">{{ 'page.add_personne.date_evangelisation' | translate }}</label>
-      <input type="text" class="form-control" id="datenaissance" [formControl]="dateEvangelisation"
-        placeholder="jj/mm/aaaa">
-      <small class="form-text message_erreur" *ngIf="dateEvangelisationInvalide">{{ 'page.add_personne.date_invalide' |
-        translate }}</small>
-    </div>
+    <app-formulaire-creer-modifier-personne [validation]="validation"></app-formulaire-creer-modifier-personne>
+
 
     <div class="row mb-2 mt-3">
       <button (click)="back()" type="submit" class="btn btn-secondary col-md-5 col-sm-12 mb-2 ms-3">{{
@@ -108,8 +28,6 @@
         class="btn ml-1 btn-primary bouton-enregistrer col-md-6 col-sm-12 mb-2 ms-3"
         [ngStyle]="{'backgroundColor': secondaryColor }">{{ 'page.add_personne.enregistrer' | translate }}</button>
     </div>
-
-  </div>
 
 
 </div>
