--- a/src/app/components/rapport/rapport.component.html
+++ b/src/app/components/rapport/rapport.component.html
@@ -1,6 +1,6 @@
 <!-- <div class="container"> -->
   <div class="mb-2">
-    <button (click)="generate()" type="submit" class="btn btn-secondary mb-2 ">{{
+    <button (click)="generate()" type="submit" class="btn btn-secondary mb-2 " [disabled]="!enabled">{{
       'common.'+buttonLibelle | translate }}
     </button>
 
